// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectPage IconTabBar Mode 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    >
      <ui5-button
        class=""
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          >
            Fiori Object Page Title
          </h1>
          <span
            class="ObjectPage--subTitle-"
          >
            Sub Title
          </span>
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            >
              <span
                class="ObjectPage--headerCustomContent-"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <ui5-link
                    class=""
                    design="Default"
                    href="https://www.sap.com"
                  >
                    www.myurl.com
                  </ui5-link>
                  <span
                    class="Text--text-"
                  >
                    Address 1
                  </span>
                  <span
                    class="Text--text-"
                  >
                    Address 2
                  </span>
                  <span
                    class="Text--text-"
                  >
                    Address 3
                  </span>
                </div>
              </span>
            </div>
            <ui5-button
              class=""
              design="Default"
              icon="sap-icon://navigation-up-arrow"
              style="position: absolute; line-height: 2.5rem;"
            />
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button- ObjectPageAnchorButton--selected-"
              >
                Test 1
              </span>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button-"
              >
                Test 2
              </span>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button-"
              >
                Test 3
              </span>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button-"
              >
                Test 4
              </span>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  class=""
                  src="sap-icon://slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                class=""
                header-text=""
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  class=""
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <ui5-li
                    class=""
                    data-key="4.1"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 4.1
                  </ui5-li>
                  <ui5-li
                    class=""
                    data-key="4.2"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 4.2
                  </ui5-li>
                </ui5-list>
              </ui5-popover>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button-"
              >
                Test 5
              </span>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  class=""
                  src="sap-icon://slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                class=""
                header-text=""
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  class=""
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <ui5-li
                    class=""
                    data-key="5.1"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 5.1
                  </ui5-li>
                  <ui5-li
                    class=""
                    data-key="5.2"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 5.2
                  </ui5-li>
                </ui5-list>
              </ui5-popover>
            </li>
          </section>
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 1
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <ui5-label
                  class=""
                  for=""
                >
                  My Content 1
                </ui5-label>
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Just Some Sections 1`] = `"<div class=\\"ObjectPage--outerScrollbar--2-116\\"><div class=\\"ObjectPage--innerScrollbar--2-117\\"><div class=\\"ObjectPage--scrollbarContent--2-118\\"></div></div></div><header role=\\"banner\\" aria-roledescription=\\"Object page header\\" class=\\"ObjectPage--header--2-119\\"><span class=\\"ObjectPage--actions--2-125\\"></span><header class=\\"ObjectPage--titleBar--2-121\\"><div style=\\"display:flex;align-items:center\\"><span class=\\"ObjectPage--container--2-122\\"><h1 class=\\"ObjectPage--title--2-123\\"></h1><span class=\\"ObjectPage--subTitle--2-124\\"></span></span></div></header></header><div class=\\"ObjectPage--outerContentContainer--2-111\\"><div id=\\"ObjectPageContent\\" class=\\"ObjectPage--contentContainer--2-110\\"><div class=\\"ObjectPage--contentScrollContainer--2-112\\"><div></div><div><div style=\\"position:relative\\" class=\\"ObjectPage--contentHeader--2-120\\"><div class=\\"ObjectPage--headerContent--2-128\\"></div></div><section class=\\"ObjectPage--anchorBar--2-113\\" role=\\"navigation\\"><li class=\\"ObjectPageAnchorButton--anchorButtonContainer--2-133\\"><span class=\\"ObjectPageAnchorButton--button--2-134 ObjectPageAnchorButton--selected--2-135\\"></span></li><li class=\\"ObjectPageAnchorButton--anchorButtonContainer--2-133\\"><span class=\\"ObjectPageAnchorButton--button--2-134\\"></span></li></section></div><section class=\\"ObjectPage--sectionsContainer--2-114\\"><section id=\\"ObjectPageSection-1\\" role=\\"region\\"><div role=\\"heading\\" class=\\"ObjectPageSection--header--2-136\\"><div class=\\"ObjectPageSection--title--2-137 ObjectPageSection--uppercase--2-138\\"></div></div><div class=\\"ObjectPageSection--sectionContent--2-139\\"><div class=\\"ObjectPageSection--sectionContentInner--2-140\\">Test</div></div></section></section><div class=\\"ObjectPage--fillerDiv--2-115\\"></div></div></div></div>"`;

exports[`ObjectPage No Header 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    />
    <section
      class="ObjectPage--anchorBar-"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton--anchorButtonContainer-"
      >
        <div
          class=""
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton--button-"
          />
        </div>
      </li>
      <li
        class="ObjectPageAnchorButton--anchorButtonContainer-"
      >
        <div
          class="ObjectPageAnchorButton--selected-"
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton--button-"
          />
        </div>
      </li>
    </section>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div />
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              />
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                Test
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              />
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                Test 2
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Not crashing with 0 sections 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    />
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          />
          <span
            class="ObjectPage--subTitle-"
          />
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            />
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          />
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        />
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Not crashing with 1 section - Default Mode 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    />
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          />
          <span
            class="ObjectPage--subTitle-"
          />
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            />
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class="ObjectPageAnchorButton--selected-"
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                />
              </div>
            </li>
          </section>
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              />
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                Test
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Not crashing with 1 section - IconTabBar Mode 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    />
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          />
          <span
            class="ObjectPage--subTitle-"
          />
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            />
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button- ObjectPageAnchorButton--selected-"
              />
            </li>
          </section>
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              />
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                Test
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Only Sections 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    >
      <ui5-button
        class=""
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          >
            Fiori Object Page Title
          </h1>
          <span
            class="ObjectPage--subTitle-"
          >
            Sub Title
          </span>
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            >
              <span
                class="ObjectPage--headerCustomContent-"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <ui5-link
                    class=""
                    design="Default"
                    href="https://www.sap.com"
                  >
                    www.myurl.com
                  </ui5-link>
                  <span
                    class="Text--text-"
                  >
                    Address 1
                  </span>
                  <span
                    class="Text--text-"
                  >
                    Address 2
                  </span>
                  <span
                    class="Text--text-"
                  >
                    Address 3
                  </span>
                </div>
              </span>
            </div>
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 1
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 2
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class="ObjectPageAnchorButton--selected-"
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 3
                </span>
              </div>
            </li>
          </section>
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 1
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <ui5-label
                  class=""
                  for=""
                >
                  My Content 1
                </ui5-label>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 2
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <ui5-label
                  class=""
                  for=""
                >
                  My Content 2
                </ui5-label>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-3"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 3
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <ui5-label
                  class=""
                  for=""
                >
                  My Content 3
                </ui5-label>
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Set selected section id 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    />
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          />
          <span
            class="ObjectPage--subTitle-"
          />
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            />
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button-"
              />
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <span
                class="ObjectPageAnchorButton--button- ObjectPageAnchorButton--selected-"
              />
            </li>
          </section>
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              />
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                Test 2
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage With Subsections 1`] = `
<div
  class="ObjectPage--objectPage-"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPage--outerScrollbar-"
  >
    <div
      class="ObjectPage--innerScrollbar-"
    >
      <div
        class="ObjectPage--scrollbarContent-"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage--header-"
    role="banner"
  >
    <span
      class="ObjectPage--actions-"
    >
      <ui5-button
        class=""
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage--titleBar-"
    >
      <div
        style="display: flex; align-items: center;"
      >
        <span
          class="ObjectPage--container-"
        >
          <h1
            class="ObjectPage--title-"
          >
            Fiori Object Page Title
          </h1>
          <span
            class="ObjectPage--subTitle-"
          >
            Sub Title
          </span>
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage--outerContentContainer-"
  >
    <div
      class="ObjectPage--contentContainer-"
      id="ObjectPageContent"
    >
      <div
        class="ObjectPage--contentScrollContainer-"
      >
        <div />
        <div>
          <div
            class="ObjectPage--contentHeader-"
            style="position: relative;"
          >
            <div
              class="ObjectPage--headerContent-"
            >
              <span
                class="ObjectPage--headerCustomContent-"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <ui5-link
                    class=""
                    design="Default"
                    href="https://www.sap.com"
                  >
                    www.myurl.com
                  </ui5-link>
                  <span
                    class="Text--text-"
                  >
                    Address 1
                  </span>
                  <span
                    class="Text--text-"
                  >
                    Address 2
                  </span>
                  <span
                    class="Text--text-"
                  >
                    Address 3
                  </span>
                </div>
              </span>
            </div>
            <ui5-button
              class=""
              design="Default"
              icon="sap-icon://navigation-up-arrow"
              style="position: absolute; line-height: 2.5rem;"
            />
          </div>
          <section
            class="ObjectPage--anchorBar-"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 1
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 2
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 3
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 4
                </span>
              </div>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  class=""
                  src="sap-icon://slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                class=""
                header-text=""
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  class=""
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      class=""
                      data-key="4.1"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 4.1
                    </ui5-li>
                  </div>
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      class=""
                      data-key="4.2"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 4.2
                    </ui5-li>
                  </div>
                </ui5-list>
              </ui5-popover>
            </li>
            <li
              class="ObjectPageAnchorButton--anchorButtonContainer-"
            >
              <div
                class="ObjectPageAnchorButton--selected-"
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton--button-"
                >
                  Test 5
                </span>
              </div>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  class=""
                  src="sap-icon://slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                class=""
                header-text=""
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  class=""
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      class=""
                      data-key="5.1"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 5.1
                    </ui5-li>
                  </div>
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      class=""
                      data-key="5.2"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 5.2
                    </ui5-li>
                  </div>
                </ui5-list>
              </ui5-popover>
            </li>
          </section>
        </div>
        <section
          class="ObjectPage--sectionsContainer-"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 1
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <ui5-label
                  class=""
                  for=""
                >
                  My Content 1
                </ui5-label>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 2
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <div
                  style="height: 800px;"
                >
                  Test2
                </div>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-3"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 3
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                Test1
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-4"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 4
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <h1>
                  Section 4
                </h1>
                <div
                  class="ObjectPageSubSection--objectPageSubSection-"
                  id="ObjectPageSubSection-4.1"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection--objectPageSubSectionHeaderTitle-"
                  >
                    SubSection 4.1
                  </div>
                  <div
                    class="ObjectPageSubSection--subSectionContent-"
                  >
                    Test 4 SubSection 1
                  </div>
                </div>
                <div
                  class="ObjectPageSubSection--objectPageSubSection-"
                  id="ObjectPageSubSection-4.2"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection--objectPageSubSectionHeaderTitle-"
                  >
                    SubSection 4.2
                  </div>
                  <div
                    class="ObjectPageSubSection--subSectionContent-"
                  >
                    Test 4 SubSection 2
                  </div>
                </div>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-5"
            role="region"
          >
            <div
              class="ObjectPageSection--header-"
              role="heading"
            >
              <div
                class="ObjectPageSection--title- ObjectPageSection--uppercase-"
              >
                Test 5
              </div>
            </div>
            <div
              class="ObjectPageSection--sectionContent-"
            >
              <div
                class="ObjectPageSection--sectionContentInner-"
              >
                <div
                  class="ObjectPageSubSection--objectPageSubSection-"
                  id="ObjectPageSubSection-5.1"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection--objectPageSubSectionHeaderTitle-"
                  >
                    SubSection 5.1
                  </div>
                  <div
                    class="ObjectPageSubSection--subSectionContent-"
                  >
                    Content of SubSection 5.1
                  </div>
                </div>
                <div
                  class="ObjectPageSubSection--objectPageSubSection-"
                  id="ObjectPageSubSection-5.2"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection--objectPageSubSectionHeaderTitle-"
                  >
                    SubSection 5.2
                  </div>
                  <div
                    class="ObjectPageSubSection--subSectionContent-"
                  >
                    Content of SubSection 5.2
                  </div>
                </div>
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage--fillerDiv-"
        />
      </div>
    </div>
  </div>
</div>
`;
